# meshcore-uconsole

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml  package.yml
debian/: changelog  control  meshcore-uconsole.install  meshcore-uconsole.links  meshcore-uconsole.triggers  postinst  postrm  rules
packaging/apt/: index.html
packaging/deb/: meshcore-console.desktop
scripts/: bootstrap-pi.sh  capture-screenshots.sh  capture_screenshots.py  monkey-test.sh  monkey_test.py  package-pi.sh  run-dev.sh  run-gtk-pi.sh  update-debian-changelog.sh
src/meshcore_console/: app.py  main.py  radio_cli.py
src/meshcore_console/core/: __init__.py  enums.py  models.py  packets.py  radio.py  services.py  time.py  types.py
src/meshcore_console/meshcore/: __init__.py  cayenne_lpp.py  channel_db.py  client.py  config.py  contact_book.py  db.py  event_bridge.py  events.py  logging_setup.py  operations.py  packet_codec.py  packet_store.py  paths.py  runtime.py  session.py  settings.py  settings_store.py  state.py  state_store.py
src/meshcore_console/mock/: __init__.py  client.py  data.py  gps.py  session.py
src/meshcore_console/platform/: __init__.py  conflicts.py  device_info.py  gpio.py  gps.py  mbtiles.py  spi.py
src/meshcore_console/ui_gtk/: debug_hooks.py  helpers.py  layout.py
src/meshcore_console/ui_gtk/resources/: app.css  theme.css  tokens.css
src/meshcore_console/ui_gtk/state/: __init__.py  event_store.py
src/meshcore_console/ui_gtk/views/: __init__.py  analyzer.py  map.py  messages.py  peers.py  settings.py
src/meshcore_console/ui_gtk/widgets/: __init__.py  (+15 more)
tests/integration/: test_dm_channels.py  test_event_flow.py  test_mock_client.py  test_packaging_startup.py  test_settings_apply.py
tests/unit/: test_contact_book.py  test_db.py  test_event_store.py  test_gps.py  test_logging_setup.py  test_models.py  test_settings_store.py  test_state.py
(+1 files in other folders)
